Update home page adaptive layout

--- a/src/translation/locale/ru-RU.json
+++ b/src/translation/locale/ru-RU.json
@@ -2,7 +2,7 @@
     "about": "Это приложение позволяет быть хостом или присоединяться к уже существующим хостам, чтобы управлять играющей через Spotify хоста музыкой. Чтобы это работало, аккаунт хоста должен быть Premium, и должна проигрываться музыка.",
     "home": {
         "join": "Войти в комнату",
-        "about": "О приложении",
+        "about": "Описание",
         "create": "Создать комнату"
     }
 }
